update packrat lock file, minor changes to home page

--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -8,7 +8,8 @@ editor_options:
   chunk_output_type: console
 ---
 ```{r}
-library(r2d3)
+source("R/packages.R")
+source("R/functions.R")
 r2d3(data=c(0.3, 0.6, 0.8, 0.95, 0.40, 0.20), script = "code/barchart.js")
 ```
 
